--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@
 html {
     scroll-behavior: smooth;
     scrollbar-width: none;
+    scroll-snap-type: y mandatory;
+    scroll-padding-top: 10vh;
 
     font-family: 'Courier New', Courier, monospace;
 }
@@ -59,6 +61,7 @@ header {
     min-height: 90vh;
     display: flex;
     flex-direction: column;
+    scroll-snap-align: start;
 
     h2 {
         align-self: center;
