--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,10 @@ header {
     }
 }
 
+.recruit{
+    height: 400px;
+    width: 320px;
+}
 .subSections {
     display: flex;
     min-height: 60vh;
