--- a/styles.css
+++ b/styles.css
@@ -58,18 +58,19 @@ body {
 /* #region header/nav */
 
 nav {
-    position: fixed;
-    background-color: hsla(218, 28%, 20%, 1);
     width: 100vw;
     height: 10vh;
+    position: fixed;
     top: 0;
     bottom: auto;
     z-index: 100;
-    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    background-color: hsla(218, 28%, 20%, 1);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
     
     @media (max-width: 800px) {
         top: auto;
         bottom: 0;
+        box-shadow: 0px -10px 15px rgba(0, 0, 0, 0.3);
     }
 }
 
@@ -92,9 +93,7 @@ header {
         padding-bottom: 5vh;
         color: white;
     }
-    
 }
-
 
 /* #endregion */
 
@@ -140,8 +139,6 @@ header {
         justify-self: center;
         color: white;
     }
-
-    
 
     @media (max-width: 800px) {
         flex-direction: column;
