tekst under chart

--- a/styles.css
+++ b/styles.css
@@ -192,14 +192,47 @@ footer {
 
     
 }
+#infortekst1{
+ color: white;
+    font-size: 70%;
 
 
+}
 
 
+#infortekst2{
+    color: white;
+    font-size: 70%;
 
 
+}
+#infortekst3{
+    color: white;
+    font-size: 70%;
 
 
+}
+
+
+#infortekst4{
+    color: white;
+    font-size: 70%;
+
+
+}
+#infortekst5{
+    color: white;
+    font-size: 70%;
+
+
+}
+
+#infortekst6{
+    color: white;
+    font-size: 70%;
+
+
+}
 #knapperne{
 
 outline: none;
