lavet duo charts og marginer til charts

--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,19 @@ button {
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
     max-height: 60vh;
     max-width: 60vw;
+    margin: 0 1vw 0 1vw;
+}
+
+.duoCharts {
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    background-color: hsla(218, 28%, 17%, 90);
+    border-radius: 2vw;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+    max-width: 45vw;
+    max-height: 60vh;
+    margin: 5vh 7vw 0 1vw;
 }
 
 .surveyCharts {
