--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ header {
     flex-direction: column;
     scroll-snap-align: start;
     scroll-snap-stop: always;
+    margin-top: 5vh;
 
     h2 {
         align-self: center;
@@ -172,16 +173,23 @@ header {
 
 
 footer {
-    height: 20vh;
+    height: 60vh;
+    padding-top: 2vh;
     scroll-snap-align: end;
-    align-content: center;
-    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    a {
+    a, p {
         color: white;
     }
 
-
+    #leafletMap {
+        width: 35vw;
+        height: 45vh;
+        margin-bottom: 2vh;
+    }
 }
 
 .infotext {
