--- a/styles.css
+++ b/styles.css
@@ -263,13 +263,13 @@ button {
 .duoCharts {
     display: flex;
     flex-direction: row;
-    align-content: space-between;
+    align-items: flex-end;
     background-color: hsla(218, 28%, 17%, 90);
     border-radius: 2vw;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
-    max-width: 45vw;
+    max-width: 47vw;
     max-height: 60vh;
-    margin: 5vh 7vw 0 1vw;
+    margin: 5vh 0 0 2vw;
     padding: 2vh
 }
 
