--- a/styles.css
+++ b/styles.css
@@ -300,9 +300,11 @@ button {
     background-color:rgb(191, 248, 176);
     margin-left: 2vw;
     border-radius: 3vh;
-    width: 6vw;
+    width: 7vw;
     text-align: center;
-    font-size: 0.7vw;
+    font-size: 0.8vw;
+    margin-bottom: 3vh;
+
 
 }
 
