switch i mobil version

--- a/styles.css
+++ b/styles.css
@@ -326,6 +326,14 @@ button {
 
     }
 
+    #beggeknapepr {
+        width: 50vw !important;
+    }
+
+
+
+
+
 
     #lønmenu {
         margin-left: 3vw;
