--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,24 @@ footer {
     justify-content: space-between;
     margin-top: 3vh;
 
+
 }
+#Btmløn{
+      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8); 
+
+
+}
+#BtmKønsfordeling{
+         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8);
+
+}
+ #BtmJobstart{
+     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8); 
+
+ }
+     #Btmtrivsel{
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8);
+     }
 
 
 button {
