--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,7 @@ footer {
 .infotext {
     color: white;
     font-size: 70%;
+
 }
 
 .knapperne {
@@ -259,6 +260,7 @@ button {
     color: rgb(8, 6, 56);
     font-size: 60%;
     font-weight: bold;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.8);
 
     cursor: pointer;
 
@@ -544,24 +546,53 @@ label {
     padding-right: 4vw;
     margin-bottom: 0vh;
 
+
+}
+#leafletMap{
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+
+}
+#boxchart1{
+    
+    background-color: hsla(218, 28%, 17%, 90);
+    border-radius: 2vw;
+    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+    
+              margin: 3vh;
+}
+#jobChart2 {
+
+
+    
+    max-width: 23vw;
+    max-height: 60vh;
+    margin: 5vh 1vw 0 1vw;
+    padding: 2vh
 }
 
+   #jobChart3 {
+                               
+
+       max-width: 23vw;        
+       max-height: 60vh;       
+       margin: 5vh 1vw 0 1vw;  
+       padding: 2vh            
+   }                           
+
+ #jobChart4 {
+
+     max-width: 23vw;
+     max-height: 60vh;
+     margin: 5vh 1vw 0 1vw;
+     padding: 2vh
+ }
 
 
 
+ #jobChart5 {
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    max-width: 20vw;
+    max-height: 60vh;
+    margin: 5vh 1vw 0 1vw;
+    padding: 1vh
+}
