--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,8 @@ header {
     min-height: 60vh;
     flex-direction: row;
     flex-grow: 1;
+  justify-content: center;
+    padding-right: 2vw;
 
     div {
         align-content: center;
@@ -365,7 +367,14 @@ button {
 
         }
 
+    #jobChart2{
+        width: 86vw  !important;
+        height: 55vh!important;
+        padding: 0;
+        margin: 3vh;
+        max-width: 100vw;
 
+    }
              #genderChart3{
               width: 86vw  !important;
               height: 55vh!important;    
@@ -376,6 +385,10 @@ button {
 
 
              }
+             #boxchart2{
+                 margin: 0;
+             }
+
 
                   #genderChart2{
                    width: 86vw  !important;
@@ -384,16 +397,77 @@ button {
                    margin: 3vh;
                    max-width: 100vw;
 
-
-
                   }
+    #wellbeingChart2{
+
+        width: 85vw  !important;
+        height: 55vh!important;
+        padding: 0;
+        margin: 3vh;
+        max-width: 100vw!important;
+
+
+    }
+    #wellbeingChart3{
+        width: 85vw  !important;
+        height: 55vh!important;
+        padding: 0;
+        margin: 3vh;
+        max-width: 100vw!important;
+
+    }
+    #wellbeingChart4{
+        width: 85vw  !important;
+        height: 55vh!important;
+        padding: 0;
+        margin: 3vh;
+        max-width: 100vw!important;
+
+    }
+    #wellbeingChart5{
+        width: 85vw  !important;
+        height: 54vh!important;
+        padding: 0;
+        margin: 3vh;
+        max-width: 100vw!important;
+
+    }
+
+    #genderChart3{
+        width: 86vw  !important;
+        height: 55vh!important;
+        padding: 0;
+        margin: 3vh;
+        max-width: 100vw;
+
+    }
+
+
+
+    #genderChart4{
+        width: 86vw  !important;
+        height: 55vh!important;
+        padding: 0;
+        margin: 3vh;
+        max-width: 100vw;
+
+    }
+
+    #genderChart5{
+        width: 86vw  !important;
+        height: 55vh!important;
+        padding: 0;
+        margin: 3vh;
+        max-width: 100vw;
+
+    }
               .surveyCharts{
 
-                    width: 86vw  !important;    
+                    width: 85vw  !important;
                     height: 55vh!important;     
                     padding: 0;                 
                     margin: 0vh;
-                    max-width: 100vw;           
+                    max-width: 100vw !important;
 
               }
          #leafletMap{
